updates tools- rename titles

--- a/online-tools/manifest.json
+++ b/online-tools/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "Shards Dashboard Lite React",
-  "name": "Shards Dashboard Lite React",
+  "short_name": "Online tools",
+  "name": "Online tools",
   "icons": [
     {
       "src": "favicon.ico",
